--- a/index.html
+++ b/index.html
@@ -149,6 +149,12 @@
         northEast = L.latLng(42.0, -91.0),
         bounds = L.latLngBounds(southWest, northEast);
 
+    var map = L.mapbox.map('map', 'https://tiles.stadiamaps.com/styles/alidade_smooth/rendered.json')
+    .setView([41.656620, -91.531674], 15)
+    .setMaxBounds(bounds)
+    .setMaxZoom(18)
+    .setMinZoom(12);
+/*
     // Initialize the map
     var map = L.map('map')
       .setView([41.656620, -91.531674], 15)
@@ -160,7 +166,7 @@
       maxZoom: 18,
       minZoom: 12,
     }).addTo(map);
-
+*/
     // add a scale bar
     L.control.scale().addTo(map);
 
