--- a/index.html
+++ b/index.html
@@ -149,24 +149,18 @@
         northEast = L.latLng(42.0, -91.0),
         bounds = L.latLngBounds(southWest, northEast);
 
-    var map = L.mapbox.map('map', 'https://tiles.stadiamaps.com/styles/alidade_smooth/rendered.json')
-    .setView([41.656620, -91.531674], 15)
-    .setMaxBounds(bounds)
-    .setMaxZoom(18)
-    .setMinZoom(12);
-/*
     // Initialize the map
     var map = L.map('map')
       .setView([41.656620, -91.531674], 15)
       .setMaxBounds(bounds);
 
-    L.tileLayer('https://tiles.stadiamaps.com/tiles/alidade_smooth/{z}/{x}/{y}{r}.png', {
-    	maxZoom: 20,
-    	attribution: '&copy; <a href="https://stadiamaps.com/">Stadia Maps</a>, &copy; <a href="https://openmaptiles.org/">OpenMapTiles</a> &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors',
-      maxZoom: 18,
+    L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}{r}.png', {
+  	  attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/attributions">CARTO</a>',
+  	  subdomains: 'abcd',
+    	maxZoom: 18,
       minZoom: 12,
     }).addTo(map);
-*/
+
     // add a scale bar
     L.control.scale().addTo(map);
 
