--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         div.innerHTML +=
           "<b style='font-size:14px'>Non-White Households</b>" + '<br><br>' + '<i style="background:' + getColorPoc(1) + '"></i> ' +
             'African-American Household' + '<br>' + '<i style="background:' + getColorPoc(2) + '"></i> ' + 'Latinx Household' +
-            '<br><br>' + "<b style='font-size:14px'>Non-White Households</b>" + '<br><br>' + '<i style="background:' + getColorRestrictive(1) + '"></i> ' +
+            '<br><br>' + "<b style='font-size:14px'>Restricted Lots</b>" + '<br><br>' + '<i style="background:' + getColorRestrictive(1) + '"></i> ' +
               'Subdivision Restriction' + '<br>' + '<i style="background:' + getColorRestrictive(2) + '"></i> ' + 'Parcel Restriction';
 
         //div.innerHTML = pocLabels.join('<br>');
