--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
   <link href='https://api.mapbox.com/mapbox.js/v3.2.1/mapbox.css' rel='stylesheet' />
   <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
 
-  <!-- for grouped layer control -->
-  <link rel="stylesheet" href="src/leaflet.groupedlayercontrol.css" />
+  <!--for filter button icon support-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/v4-shims.css">
+
+  <!-- for easy buttons -->
+  <link rel="stylesheet" href="css/easy-button.css">
+
+  <!-- for filter buttons -->
+  <link rel="stylesheet" href="css/leaflet-tag-filter-button.css">
 
   <style type="text/css">
     h1 {
@@ -124,6 +132,14 @@
       margin-top: 4px;
       opacity: 0.7;
     }
+
+    .easy-button-button {
+      display: inline-block !important;
+    }
+
+    .tag-filter-tags-container {
+      left: 30px;
+    }
   </style>
 </head>
 
@@ -140,8 +156,11 @@
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
-  <!-- for grouped layer control -->
-  <script src="src/leaflet.groupedlayercontrol.js"></script>
+  <!-- for easy buttons -->
+  <script src="js/easy-button.js"></script>
+
+  <!-- for filter buttons -->
+  <script src="js/leaflet-tag-filter-button.js"></script>
 
   <script type="text/javascript">
     // Define bounding coordinates to prevent dragging too far from Iowa City
@@ -190,6 +209,11 @@
       var pocParcels = L.geoJson(poc, {
         // style the layer
         style: function(feature) {
+
+          var tags = [];
+
+          tags.push(feature.properties.Household_Race);
+
           return {
               stroke: 0.25,
               color: getColorPoc(feature.properties.B_occ),
@@ -197,6 +221,7 @@
               weight: 0.25,
               fillColor: getColorPoc(feature.properties.B_occ),
               fillOpacity: 0.5,
+              tags: tags,
             };
         },
 
@@ -232,6 +257,12 @@
 
         // style the layer
         style: function(feature) {
+
+          var tags = []; // declare an empty array for filter tags
+
+          tags.push(feature.properties.Decade);
+          tags.push(feature.properties.Restriction);
+
           return {
             stroke: 0.25,
             color: 'white',
@@ -239,6 +270,7 @@
             weight: 0.25,
             fillColor: getColorRestrictive(feature.properties.REST),
             fillOpacity: 0.5,
+            tags: tags,
           };
         },
 
@@ -278,6 +310,44 @@
         }
 
       }).addTo(map); // end restrictiveParcels
+
+      // Households
+      L.control.tagFilterButton({
+        data: ['African-American Household','Latinx Household'],
+        filterOnEveryClick: true,
+        icon: '<i class="fas fa-universal-access" style="font-size:18px; padding-top: 6px;"></i>',
+      }).addTo(map);
+
+      // Decades
+      L.control.tagFilterButton({
+        data: ['1920s','1930s','1940s'],
+        filterOnEveryClick: true,
+        icon: '<i class="fas fa-hourglass-half" style="font-size:18px; padding-top: 6px;"></i>',
+      }).addTo(map);
+
+      // Restrictions
+      L.control.tagFilterButton({
+        data: ['Subdivision Restriction','Parcel Restriction'],
+        filterOnEveryClick: true,
+        icon: '<i class="fas fa-border-all" style="font-size:18px; padding-top: 6px;"></i>',
+      }).addTo(map);
+
+      jQuery('.easy-button-button').click(function() {
+        target = jQuery('.easy-button-button').not(this);
+        target.parent().find('.tag-filter-tags-container').css({
+          'display': 'none',
+        });
+      });
+
+      //disable dragging of the map after clicking a filter button
+      jQuery('.easy-button-button').click(function() {
+        map.dragging.disable();
+      });
+
+      //enable dragging of the map after clicking on the map
+      map.on('click', function() {
+        map.dragging.enable();
+      });
 
       var overlays = {
         "Non-White Households" : pocParcels,
