--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       background-color: rgba(255, 255, 255, 0.7);
       border-radius: 3px;
       bottom: 30px;
-      width: 200px;
+      width: 203px;
       box-shadow: 0px 0px 0px 2px rgba(0, 0, 0, 0.3);
       font: 12px/20px 'Rubik', 'Rubik', 'Rubik', sans-serif;
       padding: 10px;
@@ -343,7 +343,7 @@
         // loop through categories and generate a label with a colored square for each
         div.innerHTML +=
           "<b style='font-size:14px'>Non-White Households</b>" + '<br><br>' + '<i style="background:' + getColorPoc(1) + '"></i> ' +
-            'African-American Household' + '<br>' + '<i style="background:' + getColorPoc(2) + '"></i> ' + 'Latinx Household' +
+            'African-American Households' + '<br>' + '<i style="background:' + getColorPoc(2) + '"></i> ' + 'Latinx Households' +
             '<br><br>' + "<b style='font-size:14px'>Restricted Lots</b>" + '<br><br>' + '<i style="background:' + getColorRestrictive(1) + '"></i> ' +
               'Subdivision Restriction' + '<br>' + '<i style="background:' + getColorRestrictive(2) + '"></i> ' + 'Parcel Restriction';
 
