--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
           icon: '<i class="fa fa-expand" aria-hidden="true" style="font-size:18px; padding-top: 6px;"></i>',
           title: 'Expand the map',
           onClick: function(e) {
-            window.location.href = 'https://ui-libraries.github.io/IowaCity_Restrictive_Covenants/index0.html';
+            window.location.href = 'https://ui-libraries.github.io/IowaCity_Restrictive_Covenants/index0.html','_blank';
           }
         }]
       }).addTo(map);
